force-app/main/default/objects/SalesPlanFact__c/SalesPlanFact__c.object-meta.xml
<CustomObject>
    <label>Sales Plan and Fact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record ID Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plan and Fact</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>