force-app/main/default/objects/SalesPlanFact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>