force-app/main/default/objects/SalesPlanFact__c/fields/CasingEnds__c.field-meta.xml
<CustomField>
    <fullName>CasingEnds__c</fullName>
    <formula>TEXT(OrderProduct__r.TubeEnds__r.CasingEnds__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casing Ends</label>
    <type>Text</type>
</CustomField>