force-app/main/default/objects/SalesPlanFact__c/fields/Check_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Check_Sales_Amount__c</fullName>
    <formula>SalesAmount__c =  Sales_Budget_Record__r.SalesAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Sales Amount</label>
    <type>Checkbox</type>
</CustomField>