force-app/main/default/objects/SalesPlanFact__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>