force-app/main/default/objects/SalesPlanFact__c/fields/Ends__c.field-meta.xml
<CustomField>
    <fullName>Ends__c</fullName>
    <formula>OrderProduct__r.TubeEnds__r.ShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ends</label>
    <type>Text</type>
</CustomField>