force-app/main/default/objects/SalesPlanFact__c/fields/EndsType__c.field-meta.xml
<CustomField>
    <fullName>EndsType__c</fullName>
    <formula>TEXT(OrderProduct__r.TubeEnds__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ends Type</label>
    <type>Text</type>
</CustomField>