force-app/main/default/objects/SalesPlanFact__c/fields/ExchangeTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>ExchangeTimeStamp__c</fullName>
    <label>Exchange Time Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>