force-app/main/default/objects/SalesPlanFact__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <description>Id code of the order item in the ERP system (used only for Plan or Fact record types).</description>
    <label>ID in ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>