force-app/main/default/objects/SalesPlanFact__c/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <formula>TEXT(Order__r.DeliveryTerms__r.Incoterms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incoterms</label>
    <type>Text</type>
</CustomField>