force-app/main/default/objects/SalesPlanFact__c/fields/InitialRecordId__c.field-meta.xml
<CustomField>
    <fullName>InitialRecordId__c</fullName>
    <description>Salesforce Id of the initial record</description>
    <externalId>true</externalId>
    <label>Initial Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>