force-app/main/default/objects/SalesPlanFact__c/fields/InitialRecordURL__c.field-meta.xml
<CustomField>
    <fullName>InitialRecordURL__c</fullName>
    <description>URL of the initial record.</description>
    <inlineHelpText>URL of the initial record.</inlineHelpText>
    <label>Initial Record URL</label>
    <type>Url</type>
</CustomField>