force-app/main/default/objects/SalesPlanFact__c/fields/KeyField__c.field-meta.xml
<CustomField>
    <fullName>KeyField__c</fullName>
    <formula>ID_ERP__c &amp; &apos;|&apos; &amp; Text(Year(Period__c)) &amp; &apos;-&apos; &amp; LPad(Text(Month(Period__c)), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Field</label>
    <type>Text</type>
</CustomField>