force-app/main/default/objects/SalesPlanFact__c/fields/LastMonthOfYear__c.field-meta.xml
<CustomField>
    <fullName>LastMonthOfYear__c</fullName>
    <formula>Month(Period__c) = 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month of the Year</label>
    <type>Checkbox</type>
</CustomField>