force-app/main/default/objects/SalesPlanFact__c/fields/MonthNum__c.field-meta.xml
<CustomField>
    <fullName>MonthNum__c</fullName>
    <formula>MONTH(Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MonthNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>