force-app/main/default/objects/SalesPlanFact__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>