force-app/main/default/objects/SalesPlanFact__c/fields/OrderAdditionalNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderAdditionalNumber__c</fullName>
    <label>Order Additional Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>