force-app/main/default/objects/SalesPlanFact__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>