force-app/main/default/objects/SalesPlanFact__c/fields/Owner_Test__c.field-meta.xml
<CustomField>
    <fullName>Owner_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner to test the joined report</description>
    <label>Owner_Test</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>