force-app/main/default/objects/SalesPlanFact__c/fields/PeriodYear__c.field-meta.xml
<CustomField>
    <fullName>PeriodYear__c</fullName>
    <formula>YEAR(Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>