force-app/main/default/objects/SalesPlanFact__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>Used for &apos;Forecast&apos; record type.</description>
    <label>Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>