force-app/main/default/objects/SalesPlanFact__c/fields/ProducedForecast__c.field-meta.xml
<CustomField>
    <fullName>ProducedForecast__c</fullName>
    <label>Produced Forecast</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>