force-app/main/default/objects/SalesPlanFact__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>