force-app/main/default/objects/SalesPlanFact__c/fields/Production_Plan__c.field-meta.xml
<CustomField>
    <fullName>Production_Plan__c</fullName>
    <label>Production Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>