force-app/main/default/objects/SalesPlanFact__c/fields/ProductionAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductionAmount__c</fullName>
    <label>Dispatched Amount (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>