force-app/main/default/objects/SalesPlanFact__c/fields/QuotaType__c.field-meta.xml
<CustomField>
    <fullName>QuotaType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Type</label>
    <referenceTo>QuotaType__c</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>