force-app/main/default/objects/SalesPlanFact__c/fields/Sales_Budget_Record__c.field-meta.xml
<CustomField>
    <fullName>Sales_Budget_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Budget Record</label>
    <referenceTo>SalesBudgetRecord__c</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>