force-app/main/default/objects/SalesPlanFact__c/fields/Sales_Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Budget_Type__c</fullName>
    <formula>TEXT(Sales_Budget_Record__r.SalesBudget__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Budget Type</label>
    <type>Text</type>
</CustomField>