force-app/main/default/objects/SalesPlanFact__c/fields/SalesAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount__c</fullName>
    <label>Sales Amount (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>