force-app/main/default/objects/SalesPlanFact__c/fields/SecondChoice__c.field-meta.xml
<CustomField>
    <fullName>SecondChoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Choice</label>
    <type>Checkbox</type>
</CustomField>