force-app/main/default/objects/SalesPlanFact__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Sales Plan and Fact</relationshipLabel>
    <relationshipName>Sales_Plan_and_Fact</relationshipName>
    <type>Lookup</type>
</CustomField>