force-app/main/default/objects/SalesPlanFact__c/fields/TubingEnds__c.field-meta.xml
<CustomField>
    <fullName>TubingEnds__c</fullName>
    <formula>TEXT(OrderProduct__r.TubeEnds__r.TubingEnds__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tubing Ends</label>
    <type>Text</type>
</CustomField>