force-app/main/default/objects/SalesPlanFact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Budget</fullName>
                <color>#FFCC33</color>
                <label>Initial Budget</label>
            </value>
            <value>
                <fullName>Corrected Budget</fullName>
                <color>#DDDDDD</color>
                <label>Corrected Budget</label>
            </value>
            <value>
                <fullName>Actual Budget</fullName>
                <color>#78C953</color>
                <label>Budget</label>
            </value>
            <value>
                <fullName>Plan</fullName>
                <color>#AFCADF</color>
                <label>Plan</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <color>#2F5D85</color>
                <label>Open Orders</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
                <color>#419249</color>
                <label>Open Orders &amp; Opps</label>
            </value>
            <value>
                <fullName>Fact</fullName>
                <color>#2F5D85</color>
                <label>Fact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>