force-app/main/default/objects/SalesPlanFact__c/recordTypes/ActualBudget.recordType-meta.xml
<RecordType>
    <fullName>ActualBudget</fullName>
    <active>true</active>
    <label>Actual Budget</label>
</RecordType>