force-app/main/default/objects/SalesPlanFact__c/recordTypes/CorrectedBudget.recordType-meta.xml
<RecordType>
    <fullName>CorrectedBudget</fullName>
    <active>true</active>
    <label>Corrected Budget</label>
</RecordType>