force-app/main/default/objects/SalesPlanFact__c/recordTypes/Fact.recordType-meta.xml
<RecordType>
    <fullName>Fact</fullName>
    <active>true</active>
    <description>Actual production and sales data</description>
    <label>Fact</label>
</RecordType>