force-app/main/default/objects/SalesPlanFact__c/recordTypes/InitialBudget.recordType-meta.xml
<RecordType>
    <fullName>InitialBudget</fullName>
    <active>true</active>
    <label>Initial Budget</label>
</RecordType>