force-app/main/default/objects/SalesPlanFact__c/recordTypes/Order.recordType-meta.xml
<RecordType>
    <fullName>Order</fullName>
    <active>true</active>
    <description>Open order</description>
    <label>Order</label>
</RecordType>