force-app/main/default/objects/SalesPlanFact__c/recordTypes/Plan.recordType-meta.xml
<RecordType>
    <fullName>Plan</fullName>
    <active>true</active>
    <description>Production and sales plan data</description>
    <label>Plan</label>
</RecordType>