force-app/main/default/objects/SalesPlanFact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrderAdditionalNumber__c</columns>
    <columns>Period__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MarketSegment__c</columns>
    <columns>Country__c</columns>
    <columns>Account__c</columns>
    <columns>Production_Amount__c</columns>
    <columns>ProductionAmount__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Production_Plan__c</columns>
    <columns>Order__c</columns>
    <columns>OrderProduct__c</columns>
    <columns>ITENumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ITENumber__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>