force-app/main/default/objects/SalesPlanFact__c/listViews/Fact_Records.listView-meta.xml
<ListView>
    <fullName>Fact_Records</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>InitialRecordURL__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Shop__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Country__c</columns>
    <columns>Account__c</columns>
    <columns>ProductionAmount__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Revenue__c</columns>
    <columns>Margin__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Fact</value>
    </filters>
    <filters>
        <field>Period__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2023</value>
    </filters>
    <filters>
        <field>ITENumber__c</field>
        <operation>contains</operation>
        <value>24-003231-001</value>
    </filters>
    <label>Fact Records</label>
</ListView>