force-app/main/default/objects/SalesPlanFact__c/listViews/Plans.listView-meta.xml
<ListView>
    <fullName>Plans</fullName>
    <columns>NAME</columns>
    <columns>KeyField__c</columns>
    <columns>Shop__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MarketSegment__c</columns>
    <columns>Country__c</columns>
    <columns>Account__c</columns>
    <columns>ProductionAmount__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Margin__c</columns>
    <columns>Margin_t__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SalesPlanFact__c.Plan</value>
    </filters>
    <label>Plans</label>
</ListView>