force-app/main/default/objects/SalesPlanFact__c/listViews/SPF_MENA.listView-meta.xml
<ListView>
    <fullName>SPF_MENA</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Country__c</columns>
    <columns>ITENumber__c</columns>
    <columns>Period__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <columns>MarketSegment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Period__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Artemov</value>
    </filters>
    <label>SPF Artemov</label>
</ListView>